Fix form sizing issue on small screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,10 @@ a {
     height: 25vh;
 }
 
+.contact-hero {
+    margin: 20px 0;
+}
+
 h1 {
     color: #dca537;
 }
